--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 .title {
-    background-image: url("pattern.webp");
+    background-image: url("https://content.codecademy.com/courses/freelance-1/unit-2/pattern.jpeg");
     font-family: Helvetica;
     font-size:100px;
     color: khaki;
